# respondr-lite

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.backend  LICENSE  LOCAL_AUTH_README.md  README.md  analyze_preprod_results.py  check_latest.py  debug_an_hour_and_10.py  debug_exact_scenario.py  debug_minute_patterns.py  dev-local.ps1  docker-compose.local.yml  github-actions-setup-20251123-122337.txt  migrate-to-static-web-app.ps1  nginx.conf  renameProject.ps1  render.yaml  run-tests.cmd  run-tests.ps1  seed-webhook.ps1  sync-preprod-to-local.ps1  temp-ingress-update.yaml  temp_messages.json  test-encoding.ps1  test-frontend-encoding.ps1  test_90min_focused.py  test_ai_parsing.py  test_ai_parsing_mock.py  test_edge_cases.py  test_end_to_end.py  test_eta_60min_bug.py  test_eta_conversion.py  test_eta_fixes_live.py  test_local_webhook.py  test_message1.json  test_message2.json  test_results.txt  (+3 more)
_attic/: WHY.md  check_local_redis.py  check_preprod_redis.py  debug_90min.py  debug_90min_direct.py  debug_base_time.py  jest.config.js.bak  test_afternoon_eta.py  test_preprod_webhook.py  test_single_90min.py  test_status_chips.py  test_status_context.py
backend/: README.md  STORAGE_CONFIG.md  TESTING.md  check_env.py  create_local_user.py  debug_live.py  debug_webhook_format.py  demo_eta_fixes.py  demo_function_calling.py  main.py  (+32 more)
benchmark/: process_prod_responders.ipynb  pyproject.toml  requirements.txt  run-spot-check.ps1  sar_llm_extraction_benchmark.py  sar_test_cases.json  send_groupme_test_messages.py  send_sample_messages.py  test-webhook.ps1
(+190 files in other folders)
