[project]
name = "gptperf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "pytest-benchmark>=5.1.0",
    "python-dotenv>=1.1.1",
    "tabulate>=0.9.0",
]
